--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "license": "MIT",
-  "author": "Vinícius Moraes",
+  "author": "Yuri Ribeiro Zetoles",
   "type": "module",
   "main": "src/app.js",
   "scripts": {
