--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "faker": "^5.5.3",
     "faker-br": "^0.4.1",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
