--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_PORT=
+APP_PORT=5011
 
-DB_URL=
+DB_URL=mongodb+srv://yurizetoles:admin@cluster0.mf2tswa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 DB_URL_TEST=
 
