--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Este projeto é referente ao trabalho de fábrica de software.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
@@ -14,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "compression": "^1.8.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
@@ -29,7 +32,10 @@
     "mongoose-paginate-v2": "^1.9.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
-    "sharp": "^0.34.1"
+    "sharp": "^0.34.1",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
