--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --coverage",
     "lint": "eslint ."
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
