--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose-paginate-v2": "^1.9.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
-    "sharp": "^0.34.1"
+    "sharp": "^0.34.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
