--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
     "sharp": "^0.34.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
