--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
-    "seed": "node src/seeds/aulaSeeds.js",
+    "seed": "node src/seeds/Seeds.js",
     "test": "jest --coverage",
     "lint": "eslint ."
   },
