--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
     "dotenv": "^16.5.0",
@@ -42,6 +43,7 @@
     "@babel/preset-env": "^7.27.2",
     "@eslint/js": "^9.26.0",
     "babel-jest": "^29.7.0",
+    "clear-cli": "^2.0.0",
     "eslint": "^9.26.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
