--- a/package.json
+++ b/package.json
@@ -2,56 +2,79 @@
   "name": "plataforma-de-cursos",
   "version": "1.0.0",
   "description": "Este projeto é referente ao trabalho de fábrica de software.",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon src/app.js",
-    "start": "node src/app.js",
-    "seed": "node src/seeds/Seeds.js",
-    "test": "jest --coverage",
-    "lint": "eslint ."
-  },
+  "license": "MIT",
   "type": "module",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "src/app.js",
+  "scripts": {
+    "dev": "nodemon server.js",
+    "seed": "node src/seeds/seeds.js",
+    "start": "node server.js",
+    "test": "jest --coverage --detectOpenHandles"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "express-async-errors": "^3.1.1",
-    "express-fileupload": "^1.5.1",
+    "express": "^5.1.0",
     "faker-br": "^0.4.1",
+    "fs": "^0.0.1-security",
     "helmet": "^8.1.0",
-    "i18n": "^0.15.1",
     "jsonwebtoken": "^9.0.2",
-    "moment-timezone": "^0.5.48",
-    "mongodb": "^6.16.0",
-    "mongoose": "^8.14.1",
-    "mongoose-aggregate-paginate-v2": "^1.1.4",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
     "mongoose-paginate-v2": "^1.9.0",
-    "multer": "^1.4.5-lts.2",
-    "nodemailer": "^7.0.2",
-    "sharp": "^0.34.1",
+    "path": "^0.12.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "url": "^0.11.4",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
     "@eslint/js": "^9.26.0",
     "babel-jest": "^29.7.0",
+    "babel-plugin-transform-import-meta": "^2.3.2",
     "eslint": "^9.26.0",
-    "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "jest-mock-extended": "^4.0.0-beta1",
-    "mockingoose": "^2.16.2",
-    "mongodb-memory-server": "^10.1.4",
-    "mongoose-schema-jsonschema": "^3.0.2",
-    "nodemon": "^3.1.10",
-    "supertest": "^7.1.0",
-    "winston-transport": "^4.9.0"
+    "mongodb-memory-server": "^10.1.2",
+    "nodemon": "^3.1.9"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ],
+    "plugins": [
+      "babel-plugin-transform-import-meta"
+    ]
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "testEnvironment": "node",
+    "verbose": true,
+    "transformIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/utils/helpers/index.js",
+      "/utils/logger.js"
+    ]
   }
 }
