--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "eslint": "^9.26.0",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.1"
   },
   "babel": {
     "presets": [
