--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,58 @@
-APP_PORT= "5011"
+# Porta em que o servidor irá rodar
+APP_PORT=5011
 
-DB_URL= ""
+# URL de conexão com o banco MongoDB
+# Exemplos:
+#   Local:  mongodb://localhost:27017/plataforma-de-cursos
+#   Atlas:  mongodb+srv://<usuario>:<senha>@<cluster>.mongodb.net/plataforma-de-cursos?retryWrites=true&w=majority
+DB_URL="sua_url"
 
-DB_URL_TEST=
+# URL de conexão com o banco de testes (opcional)
+DB_URL_TEST="sua_url_de_teste"
 
-NODE_ENV=
+# Ambiente da aplicação: development, test ou production
+NODE_ENV=development
+
+# Ativa/desativa logs detalhados (true ou false)
+DEBUGLOG=true
+
+# Secrets para autenticação JWT
+JWT_SECRET_ACCESS_TOKEN="sua_chave_secreta_access"
+JWT_SECRET_REFRESH_TOKEN="sua_chave_secreta_refresh"
+JWT_SECRET_PASSWORD_RECOVERY="sua_chave_secreta_recuperacao"
+
+# Tempo de expiração dos tokens JWT
+JWT_ACCESS_TOKEN_EXPIRATION=15m
+JWT_REFRESH_TOKEN_EXPIRATION=7d
+JWT_PASSWORD_RECOVERY_EXPIRATION=30m
+
+# Controle de sessão única para refresh token (true ou false)
+SINGLE_SESSION_REFRESH_TOKEN=false
+
+# Chave de API para serviço de envio de e-mails
+MAIL_API_KEY="sua_api_key"
+
+# URL base do serviço de envio de e-mails
+MAIL_API_URL=http://localhost:3001
+
+# URL do frontend para links de recuperação de senha
+FRONTEND_URL=http://localhost:3000
+
+# Nome da empresa para e-mails
+COMPANY_NAME="Plataforma de Cursos"
+
+# 📧 CONFIGURAÇÃO DE EMAIL - GOOGLE CLOUD (OPCIONAL)
+# Siga o guia em CONFIGURACAO_EMAIL_GOOGLE.md para configurar
+GOOGLE_CLIENT_ID=seu_client_id_aqui.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=seu_client_secret_aqui
+GOOGLE_REFRESH_TOKEN=seu_refresh_token_aqui
+GOOGLE_EMAIL_FROM=seu_email@gmail.com
+
+# Serviço de Email Externo
+MAIL_API_KEY="sua_chave_api_aqui"
+MAIL_API_URL="https://edurondon.tplinkdns.com/mail"
+COMPANY_NAME="IFRO Plataforma de Cursos"
+FRONTEND_URL="http://localhost:3000"
+
+# Controles de Email
+DISABLED_EMAIL=false
