--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "express": "^5.1.0",
     "faker-br": "^0.4.1",
     "fs": "^0.0.1-security",
+    "googleapis": "^150.0.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "mongoose-paginate-v2": "^1.9.0",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.4",
     "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
