--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,19 @@
-version: "3.8"
-
 services:
+  mongo:
+    container_name: plataforma-cursos-db
+    image: mongo:8
+    volumes:
+      - mongo-data:/data/db
+    command: mongod --quiet --logpath /dev/null
+    ports:
+      - "27017:27017"
+    restart: always
+
   api:
-    build: .
     container_name: plataforma-cursos-api
+    build: .
+    environment:
+      - DB_URL=mongodb://mongo:27017/plataforma
     ports:
       - "5011:5011"
     volumes:
@@ -13,15 +23,6 @@ services:
       - .env
     depends_on:
       - mongo
-    restart: always
-
-  mongo:
-    image: mongo:6
-    container_name: plataforma-cursos-db
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo-data:/data/db
     restart: always
 
 volumes:
