refactor: atualizar comentários e estrutura do arquivo .env.example para melhor clareza

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# 🔧 CONFIGURAÇÃO BÁSICA - PARA TESTES INICIAIS
+# 🔧 CONFIGURAÇÃO BÁSICA
 APP_PORT=5011
 
 # 🗄️ BANCO DE DADOS (use o nome do serviço do docker-compose para ambiente Docker)
@@ -9,7 +9,7 @@ DB_URL_TEST=mongodb://mongo:27017/plataforma_test
 NODE_ENV=development
 DEBUGLOG=true
 
-# 🔐 SECRETS JWT - GERE CHAVES FORTES EM PRODUÇÃO
+# 🔐 SECRETS JWT
 JWT_SECRET_ACCESS_TOKEN=sua_super_chave_secreta_access_token_123456
 JWT_SECRET_REFRESH_TOKEN=sua_super_chave_secreta_refresh_token_654321
 JWT_SECRET_PASSWORD_RECOVERY=sua_super_chave_secreta_recovery_token_789
@@ -22,11 +22,8 @@ JWT_PASSWORD_RECOVERY_EXPIRATION=30m
 # 🔄 CONFIGURAÇÕES EXTRAS
 SINGLE_SESSION_REFRESH_TOKEN=false
 
-# 📧 EMAIL - CONFIGURAREMOS DEPOIS (por enquanto vai falhar, mas outras rotas funcionam)
+# 📧 EMAIL
 MAIL_API_KEY=sua_api_key_aqui
 MAIL_API_URL=http://localhost:5013
 COMPANY_NAME=IFRO Plataforma de Cursos
 FRONTEND_URL=http://localhost:3000
-
-# 🔑 SEGREDO GERAL (exemplo genérico)
-SEGREDO="Coloque aqui um valor (.env.example)"
