feat: adicionar testes para rotas de usuários, incluindo cadastro, listagem e filtros

--- a/package.json
+++ b/package.json
@@ -78,7 +78,17 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "/utils/helpers/index.js",
-      "/utils/logger.js"
+      "/utils/logger.js",
+      "/src/services/AuthService.js",
+      "/src/middlewares/AuthMiddleware.js",
+      "/src/middlewares/AuthPermission.js",
+      "/src/utils/TokenUtil.js",
+      "/src/utils/AuthHelper.js",
+      "/src/services/PermissionService.js",
+      "/src/repositories/GrupoRepository.js",
+      "/src/repositories/filters/GrupoFilterBuilder.js",
+      "/src/models/Grupo.js",
+      "/src/models/Rota.js"
     ]
   }
 }
