feat: atualizar configuração do MongoDB para suporte a Replica Set e adicionar script de inicialização

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 APP_PORT=5010
 
 # 🗄️ BANCO DE DADOS (use o nome do serviço do docker-compose para ambiente Docker)
-DB_URL=mongodb://mongo:27017/plataforma
-DB_URL_TEST=mongodb://mongo:27017/plataforma_test
+DB_URL=mongodb://localhost:27017/plataforma?replicaSet=rs0
+DB_URL_TEST=mongodb://localhost:27017/plataforma_test?replicaSet=rs0
 
 # 🌍 AMBIENTE
 NODE_ENV=development
